fix: remove y scroll on mobile nav links

--- a/src/components/navigation/styles.module.scss
+++ b/src/components/navigation/styles.module.scss
@@ -127,7 +127,6 @@
 
   .open & {
     transform: translate(0);
-    overflow-y: scroll;
   }
 
   li {
